--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
 
-XAI_API_KEY = ***
+XAI_API_KEY=****
 AUTH_SECRET=****
 BLOB_READ_WRITE_TOKEN=****
 POSTGRES_URL=****
+POSTGRES_DATABASE=****
+POSTGRES_HOST=****
+POSTGRES_PASSWORD=****
+POSTGRES_USER=****
